[gd_scene load_steps=5 format=3 uid="uid://e83bbkb64l0h"]

[ext_resource type="Script" path="res://scripts/new_save_menu.gd" id="1_xhjuq"]
[ext_resource type="PackedScene" uid="uid://b3gdbsjvkgk7g" path="res://skin_builder/skin_builder_gui.tscn" id="2_c3q13"]
[ext_resource type="Shortcut" uid="uid://cyyv46obj83ya" path="res://Scenes/UI-back-shortcut.tres" id="2_ow7hs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ynugm"]

[node name="NewSaveMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xhjuq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -81.5
offset_right = 84.0
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2

[node name="SkinBuilderGui" parent="VBoxContainer" instance=ExtResource("2_c3q13")]
layout_mode = 2
alignment = 1

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 18)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Name"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Create" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../NameInput")
focus_neighbor_right = NodePath("../Back")
disabled = true
text = "Create"

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_ynugm")

[node name="Back" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Create")
focus_neighbor_top = NodePath("../../NameInput")
shortcut = ExtResource("2_ow7hs")
text = "Back"

[connection signal="text_changed" from="VBoxContainer/NameInput" to="." method="_on_name_input_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
